--- a/index.html
+++ b/index.html
@@ -67,24 +67,23 @@ body::after {
     top:0; left:0;
     width:100%; height:100%;
     background-image: 
-        radial-gradient(circle at 20% 30%, rgba(0,0,0,0.12) 10%, transparent 11%),
-        radial-gradient(circle at 70% 60%, rgba(0,0,0,0.12) 12%, transparent 13%),
-        radial-gradient(circle at 40% 80%, rgba(0,0,0,0.12) 8%, transparent 9%),
-        radial-gradient(circle at 85% 20%, rgba(0,0,0,0.12) 9%, transparent 10%),
-        radial-gradient(circle at 15% 50%, rgba(0,0,0,0.12) 11%, transparent 12%);
+        radial-gradient(circle at 20% 30%, rgba(0,0,0,0.2) 10%, transparent 11%),
+        radial-gradient(circle at 70% 60%, rgba(0,0,0,0.2) 12%, transparent 13%),
+        radial-gradient(circle at 40% 80%, rgba(0,0,0,0.2) 8%, transparent 9%),
+        radial-gradient(circle at 85% 20%, rgba(0,0,0,0.2) 9%, transparent 10%),
+        radial-gradient(circle at 15% 50%, rgba(0,0,0,0.2) 11%, transparent 12%);
     background-size: 200% 200%;
     pointer-events: none;
     z-index: 0;
     animation: patternMove 25s linear infinite;
-    opacity: 0.08;
 }
 body.dark::after {
     background-image: 
-        radial-gradient(circle at 20% 30%, rgba(255,255,255,0.1) 10%, transparent 11%),
-        radial-gradient(circle at 70% 60%, rgba(255,255,255,0.1) 12%, transparent 13%),
-        radial-gradient(circle at 40% 80%, rgba(255,255,255,0.1) 8%, transparent 9%),
-        radial-gradient(circle at 85% 20%, rgba(255,255,255,0.1) 9%, transparent 10%),
-        radial-gradient(circle at 15% 50%, rgba(255,255,255,0.1) 11%, transparent 12%);
+        radial-gradient(circle at 20% 30%, rgba(255,255,255,0.2) 10%, transparent 11%),
+        radial-gradient(circle at 70% 60%, rgba(255,255,255,0.2) 12%, transparent 13%),
+        radial-gradient(circle at 40% 80%, rgba(255,255,255,0.2) 8%, transparent 9%),
+        radial-gradient(circle at 85% 20%, rgba(255,255,255,0.2) 9%, transparent 10%),
+        radial-gradient(circle at 15% 50%, rgba(255,255,255,0.2) 11%, transparent 12%);
 }
 @keyframes patternMove {
     0% { background-position: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%; }
@@ -121,13 +120,13 @@ body.dark #mode-toggle { background: #444; color: yellow; border-color: white; }
     z-index: 1;
 }
 
-/* Team cards */
+/* Team cards smaller */
 .team-card {
     background: rgba(255,255,255,0.9);
     border-radius: 15px;
-    padding: 15px;
+    padding: 10px;
     text-align: center;
-    width: 200px;
+    width: 180px;      /* reduced size */
     transition: background 0.3s, color 0.3s, transform 0.2s;
     box-shadow: 0 8px 15px rgba(0,0,0,0.1);
     z-index: 1;
@@ -169,7 +168,8 @@ body.dark footer { background: #999999; }
 .footer-text {
     font-size: 16px;
     font-weight: bold;
-    line-height: 55px; /* vertical alignment with logo */
+    line-height: 55px; 
+    margin-left: 15px;   /* moved slightly right */
     white-space: nowrap;
 }
 
